examples/resolver/checker/pass/logic_and_conditionals.axo
const both = true && false
const either = false || true
const pick = if(true, 1, 2)
print(both)
print(either)
print(pick)
