examples/resolver/checker/fail/non_boolean_condition.axo
const bad = if(1, 2, 3)
print(bad)
